5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1822_3177.log
== TEST (2019-06-13 10:27:14) 
-- CODE:
from numpy import *
string = input()
a = 0
e = 0
i = 0
o = 0
u = 0
if (string.lower() == "a"):
	a = a + 1
elif (string.lower() == "e"):
	e = e + 1
elif (string.lower() == "i"):
	i = i + 1
elif (string.lower() == "o"):
	o = o + 1
elif (string.lower() == "u"):
	u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:33) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
if (string.lower() == "a"):
	a = a + 1
elif (string.lower() == "e"):
	e = e + 1
elif (string.lower() == "i"):
	i = i + 1
elif (string.lower() == "o"):
	o = o + 1
elif (string.lower() == "u"):
	u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:23) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(size(string))
if (z == "a"):
	a = a + 1
elif (z == "e"):
	e = e + 1
elif (z == "i"):
	i = i + 1
elif (z == "o"):
	o = o + 1
elif (z == "u"):
	u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
File "XXXX", line 8
    for z in range(size(string))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:45) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(string)):
if (z == "a"):
	a = a + 1
elif (z == "e"):
	e = e + 1
elif (z == "i"):
	i = i + 1
elif (z == "o"):
	o = o + 1
elif (z == "u"):
	u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
File "XXXX", line 9
    if (z == "a"):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:05) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(string)):
	if (z == "a"):
		a = a + 1
	elif (z == "e"):
		e = e + 1
	elif (z == "i"):
		i = i + 1
	elif (z == "o"):
		o = o + 1
	elif (z == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:16) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(string)):
	if (z.lower() == "a"):
		a = a + 1
	elif (z.lower() == "e"):
		e = e + 1
	elif (z.lower() == "i"):
		i = i + 1
	elif (z.lower() == "o"):
		o = o + 1
	elif (z.lower() == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:53) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in len(string):
	if (z.lower() == "a"):
		a = a + 1
	elif (z.lower() == "e"):
		e = e + 1
	elif (z.lower() == "i"):
		i = i + 1
	elif (z.lower() == "o"):
		o = o + 1
	elif (z.lower() == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:44) 
-- CODE:
from numpy import *
string = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(string)):
	if (z.lower() == "a"):
		a = a + 1
	elif (z.lower() == "e"):
		e = e + 1
	elif (z.lower() == "i"):
		i = i + 1
	elif (z.lower() == "o"):
		o = o + 1
	elif (z.lower() == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:55) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(string)):
	if (s[z].lower() == "a"):
		a = a + 1
	elif (s[z].lower() == "e"):
		e = e + 1
	elif (s[z].lower() == "i"):
		i = i + 1
	elif (s[z].lower() == "o"):
		o = o + 1
	elif (s[z].lower() == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:12) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z].lower() == "a"):
		a = a + 1
	elif (s[z].lower() == "e"):
		e = e + 1
	elif (s[z].lower() == "i"):
		i = i + 1
	elif (s[z].lower() == "o"):
		o = o + 1
	elif (s[z].lower() == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:57) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:21) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:57) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:26) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s.lower())):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:05) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
File "XXXX", line 8
    for z in range(len(s):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:11) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
File "XXXX", line 8
    for z in range(len(s):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:21) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").split(",").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:44) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower().split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:20) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower().split(",")
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:18) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:51:28) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- EXECUTION TIME:
0.771232
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
1
1
1
1
1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
2
1
1
0
0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
1
0
0
3
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:32) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:50) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print("a:", a)
print("e:", e)
print("i:"< i)
print("o:", o)
print("u:", u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:23) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print("a:", a)
print("e:", e)
print("i:", i)
print("o:", o)
print("u:", u)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:53:32) 
-- CODE:
from numpy import *
s = input("Digite aqui a sua string: ").lower()
a = 0
e = 0
i = 0
o = 0
u = 0
for z in range(len(s)):
	if (s[z] == "a"):
		a = a + 1
	elif (s[z] == "e"):
		e = e + 1
	elif (s[z] == "i"):
		i = i + 1
	elif (s[z] == "o"):
		o = o + 1
	elif (s[z] == "u"):
		u = u + 1
print("a:", a)
print("e:", e)
print("i:", i)
print("o:", o)
print("u:", u)
	
-- EXECUTION TIME:
0.850198
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
